2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Rename "simplify" to "expand", to avoid confusion

2019-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix loading of "Units in Physical Constants" from mode
	* Fix loading of interval arithmetic setting
	* Fix loading of "variable units" from mode

2019-04-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reverse order of previous functions, units, and variables in button menus

2019-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Hide optional arguments with default value
	* Show "optional" as placeholder text in insert function dialog
	* Nicer display of derivative in output

2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix ignore system language on Windows

2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Hide current angle unit from result

2019-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve/fix "to"-button menu
	* Add dynamic convert to menu to result popup menu

2019-03-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix dynamically updated button menus with gtk ~3.24.7

2019-03-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix lost signal handling in conversion tab (fixes search, popup menu, delete icon, etc.)

2019-03-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ask if the user wants the change the default behaviour and allow multiple instances

2019-03-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Layout fixes when formatting "= approx. 'a'"

2019-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Two's complement for hexadecimal

2019-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to ignore system language
	* Show data object properties message in separate dialog

2019-02-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved sorting of text string with unicode chars
	* Hide unit and constant suffixes in result
