@@ -1,3 +1,8 @@
+2019-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	 * Fix loading of adaptive interval display from mode
+	 * Factorize/expand improvements
+
 2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Rename "simplify" to "expand", to avoid confusion
